# devops-mcp-server

./: .dockerignore  .env.example  .gitignore  AI_DEVELOPER_GUIDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PUBLIC_USER_GUIDE.md  README.md  SECURITY.md  USAGE_GUIDE.md  audit.db  deployment.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  test_server.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
app/: auth.py  config.py  server.py
app/tools/: aws_cost_tools.py  aws_tools.py  cicd_tools.py  kubernetes_tools.py  terraform_tools.py
app/utils/: approval.py  audit.py  logger.py  shell.py
core/: audit.py  auth.py  config.py  executor.py  logger.py  security.py  startup.py
devops_mcp/: server.py
devops_mcp/tools/: aws_tools.py  cicd_tools.py  kubernetes_tools.py  terraform_tools.py
devops_mcp/utils/: logger.py  shell.py
infra/: prometheus.yml
integrations/: ansible_runner.py  argocd_client.py  aws_client.py  azure_client.py  cloudflare_client.py  datadog_client.py  docker_runner.py  gcp_client.py  github_client.py  gitlab_client.py  helm_runner.py  jenkins_client.py  k8s_client.py  pagerduty_client.py  scanner_runner.py  slack_client.py  terraform_runner.py  vault_client.py
server/: jobs.py  main.py  mcp_stdio.py  registry.py  schemas.py
tests/: conftest.py  test_api.py  test_approval.py  test_auth.py  test_aws_pagination.py  test_cicd_pagination.py  test_executor.py  test_jobs.py  test_registry.py  test_security.py  test_startup.py  test_terraform_audit.py  test_terraform_runner.py  test_terraform_safety.py  test_tools_aws.py  test_tools_github.py  test_tools_k8s.py  test_tools_terraform.py
tools/ansible/: ansible_tools.py
tools/argocd/: argocd_tools.py
tools/aws/: alb.py  cloudwatch.py  cost.py  dynamodb.py  ec2.py  ec2_lifecycle.py  ecr.py  ecs.py  iam.py  lambda_tools.py  networking.py  rds.py  rds_crud.py  s3.py  s3_objects.py  secrets.py  sns.py  sqs.py
tools/azure/: azure_tools.py
tools/cloudflare/: cloudflare_tools.py
tools/datadog/: datadog_tools.py
tools/docker/: docker_tools.py
tools/finops/: finops_tools.py
tools/gcp/: gcp_tools.py  secret_manager_tools.py
tools/github/: create_issue.py  create_pr.py  create_release.py  get_repo.py  get_workflow_run.py  list_issues.py  merge_pr.py  trigger_workflow.py
tools/gitlab/: gitlab_tools.py
tools/helm/: helm_tools.py
tools/jenkins/: jenkins_tools.py
tools/kubernetes/: configmap.py  delete_pod.py  deploy.py  get_deployments.py  get_events.py  get_logs.py  get_nodes.py  get_pods.py  get_services.py  ingress.py  jobs.py  namespace.py  rollout_restart.py  rollout_status.py  scale.py  secret.py
tools/pagerduty/: pagerduty_tools.py
tools/security/: scanner_tools.py
tools/terraform/: apply.py  destroy.py  init.py  output.py  plan.py  state_list.py  validate.py
tools/vault/: vault_tools.py
