[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-mcp-server"
version = "1.0.0"
description = "The Ultimate Infrastructure Bridge for Autonomous AI Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "MaripeddiSupraj"}
]
dependencies = [
    "mcp>=1.0.0",
    "kubernetes>=25.0.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
]

[project.scripts]
devops-mcp-server = "devops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["devops_mcp"]
